--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,10 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "pdfjs-dist": "^5.4.530"
+    "pdfjs-dist": "^5.4.530",
+    "@prisma/client": "^6.19.1"
   },
   "devDependencies": {
-    "@prisma/client": "^6.19.0",
     "nodemon": "^3.1.11",
     "prisma": "^6.19.0"
   }
